##############
Meliae Changes
##############

.. contents:: List of Releases
   :depth: 1

Meliae 0.5
##########

:0.5: (not released yet)

* Allow using negative indexes for MemObjectProxy. So you can do
  'obj[-1]' to get the last child, (same as obj.c[-1]).
  (Robert Xiao, #882356)

Meliae 0.4
##########

:0.4: 2011-07-08

* We now only compile against Cython. I've finally hit some issues that
  I don't want to work around. Namely sizeof(Class) doesn't work under
  even pyrex 0.9.9. (John Arbash Meinel)

* Duplicate parent entries are filtered out. (eg the intern dict refers
  to the same string 2x, you'll see 1 parent ref in the child, not 2.)
  (John Arbash Meinel)

* We now default to limiting the maximum length of the parents list
  (default 100). I had some dumps where a single object was referenced
  50k times. Anything over about 10 is at the point where you won't
  really walk them. This can be disabled with ``load(max_parents=-1)``.
  The main win is lowering memory consumption. A 50k parent list takes
  200kB by itself (on 32-bit).  (John Arbash Meinel)

* Fix a PyInt memory leak. We were calling __sizeof__ which returns an
  PyInt and not DECREFing it. (John Arbash Meinel)

* Initial support for overriding ``__sizeof__`` definitions. It turns
  out that object has a basic definition, so all new style classes
  inherit it. We now provide ``meliae.scanner.add_special_size``, which
  takes a type name and some callbacks to determine the size of an
  object. This lets you register them without importing the module.

* Small updates to fix the test suite under python2.7 and 64-bit
  architectures. PyString changed size in 2.7, and we weren't
  accounting for alignment effects on 64-bit machines.
  (John Arbash Meinel, Jelmer Vernooij, #739310)

* ``run_tests.py`` exits nonzero if a test fails.
  (Jelmer Vernooij, #740109)

* Add a MANIFEST.in file, to allow ``python setup.py sdist`` to
  properly see the .c and .h files it needs to include.